# python-atomicwrites

./: .gitignore  LICENSE.md  README.md  README.rst  pyproject.toml  setup.py
atomicwrites/: __init__.py  safeatomic_wrapper.py
safeatomic/: __init__.py
tests/: test_atomicwrites.py  test_simple.py
